--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "dotenv": "^16.0.3"
   }
 }
