--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.17.1",
-    "dotenv": "^16.4.7"
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6"
   }
 }
