--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "amazon-cognito-identity-js": "^6.3.12",
+    "aws-amplify": "^6.13.0",
     "cra-template": "1.2.0",
     "oidc-client-ts": "^3.1.0",
     "postcss-loader": "^8.1.1",
